# mascot

./: CMakeLists.txt  README.md  package.xml
include/: drone_object_ros.h  plugin_drone.h  plugin_ros_imu.h
launch/: controller.launch  one_robot.launch  robots.launch  simulation.launch
msg/: Force.msg  Gain.msg
scripts/: Robot.py  config.yaml  configure.py  control.py  custom_control.py  initialization.py  leader_control.py  single_controller_for_all_drone.py  temp.yaml
scripts/numpy_array/: Position-X-Robot-1.npy  Position-X-Robot-2.npy  Position-X-Robot-3.npy  Position-X-Robot-4.npy  Position-Y-Robot-1.npy  Position-Y-Robot-2.npy  Position-Y-Robot-3.npy  Position-Y-Robot-4.npy  Velocity-X-Robot-1.npy  Velocity-X-Robot-2.npy  Velocity-X-Robot-3.npy  Velocity-X-Robot-4.npy  Velocity-Y-Robot-1.npy  Velocity-Y-Robot-2.npy  Velocity-Y-Robot-3.npy  Velocity-Y-Robot-4.npy
src/: drone_object_ros.cpp  plugin_drone.cpp
urdf/: model.xacro
worlds/: sim_world.world
