<?xml version="1.0"?>
<package>
  <name>mascot</name>
  <version>0.0.0</version>
  <description>The mascot package</description>

  <maintainer email="arvind444pandit@gmail.com">Arvind</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
  <gazebo_ros
        plugin_path="${prefix}/plugins"
        gazebo_model_path="${prefix}/models"
        gazebo_media_path="${prefix}" />
  </export>
</package>
